# LOG_ANALYZER

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: parser.py  processor.py  utils.py
app/formatters/: __init__.py  base.py  tabulate.py
app/reports/: __init__.py  average.py  base.py  user_agent.py
tests/: conftest.py  test_formatters.py  test_parser.py  test_processor.py  test_reports.py  test_utils.py
