[project]
name = "LOG_ANALYZER"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "tabulate>=0.9.0"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
